fix strip alignment

--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@
 
 .ontology-ribbon__strip {
     font-size: 0.8rem;
-    margin: 1em;
+    margin-right: 2em;
     flex: 0 1 auto;
 }
 
